// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBarHeader Renders sidebar header with props.title="Sample Title" 1`] = `
<MenuItem>
  <MenuHeader
    className="side-bar-header"
  >
    SAMPLE TITLE
  </MenuHeader>
</MenuItem>
`;

exports[`SideBarHeader Renders sidebar header with props.title='' 1`] = `
<MenuItem>
  <MenuHeader
    className="side-bar-header"
  />
</MenuItem>
`;

exports[`SideBarHeader Renders sidebar header with props.title=null 1`] = `
<MenuItem>
  <MenuHeader
    className="side-bar-header"
  />
</MenuItem>
`;
